<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1f7f9"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="172dp"
        android:background="#FFFFFFFF"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/iv_binding"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="35dp"
            android:src="@mipmap/icon_bluetooth_device" />

        <TextView
            android:id="@+id/tv_scan_situation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/rcdevice_bluetooth_scan_ing"
            android:textColor="#666"
            android:textSize="14dp" />

        <TextView
            android:id="@+id/tv_scan_situation_below"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/rcdevice_bluetooth_scan_phone"
            android:textColor="#999"
            android:textSize="12dp" />

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="34dp"
        android:layout_marginTop="9dp"
        android:background="@color/white">

        <ImageView
            android:layout_width="3dp"
            android:layout_height="match_parent"
            android:background="#FFC11B" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/rcdevice_my_device_founds"
            android:textColor="#666"
            android:textSize="12dp" />


    </RelativeLayout>

    <TextView
        android:id="@+id/rcdevice_blue_not_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="60dp"
        android:drawablePadding="20dp"
        android:drawableTop="@mipmap/icon_not_data_book"
        android:gravity="center"
        android:text="@string/rcdevice_blue_not_device"
        android:textColor="#7c7d7d"
        android:lineSpacingExtra="3dp"
        android:textSize="13dp"
        android:visibility="gone" />

    <TextView
        android:id="@+id/rcdevice_blue_not_device2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:text="@string/rcdevice_blue_not_device_mjk2"
        android:textColor="#fd8706"
        android:textSize="13dp"
        android:visibility="gone" />


    <ListView
        android:id="@+id/blueList"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/tv_scan_situation"
        android:background="#FFFFFFFF"
        android:dividerHeight="1dp" />
</LinearLayout>