<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="201dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/diet_record_all_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="11dp"
                android:layout_marginTop="55dp"
                android:textColor="#e1e1e1"
                android:textSize="70dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:layout_toRightOf="@+id/diet_record_all_number"
                android:text="@string/rcdevice_record_diet_unit"
                android:textColor="#e1e1e1"
                android:textSize="15dp" />
        </RelativeLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/rcdevice_record_day_intake"
            android:textColor="#e1e1e1"
            android:textSize="15dp" />

    </LinearLayout>
    <TextView
        android:id="@+id/diet_record_consume_number"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="@string/rcdevice_record_diet_consume_tv"
        android:textColor="@color/fragment_record_app_text"
        android:textSize="13dp" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:background="@color/fragment_record_line" />
</LinearLayout>