<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f3f3f3"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="19dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/wifi_three_bg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_marginTop="31dp"
                android:background="@color/rcbase_white"
                android:orientation="vertical"
                android:paddingLeft="38dp"
                android:paddingRight="38dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rcdevice_wifi"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TextView
                            android:id="@+id/wifi_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="30dp"
                            android:layout_marginRight="3dp"
                            android:layout_toLeftOf="@+id/wifi_setting"
                            android:hint="@string/rcdevice_wifi_hint"
                            android:maxLines="1"
                            android:textColor="#333333"
                            android:textColorHint="#999999"
                            android:textSize="14dp" />

                        <TextView
                            android:id="@+id/wifi_setting"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentRight="true"
                            android:layout_centerVertical="true"
                            android:layout_marginRight="3dp"
                            android:text="@string/rcdevice_setting_wifi"
                            android:textColor="#2974fd"
                            android:textSize="16dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="5dp"
                            android:background="@color/rcbase_app_line_default" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="44dp"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/rcdevice_passward"
                        android:textColor="#333333"
                        android:textSize="16dp" />

                    <RelativeLayout
                        android:layout_width="312dp"
                        android:focusableInTouchMode="true"
                        android:layout_height="match_parent">

                        <EditText
                            android:id="@+id/wifi_passward"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_centerVertical="true"
                            android:layout_marginLeft="30dp"
                            android:background="@null"
                            android:hint="@string/rcdevice_passward_hint"
                            android:maxLines="1"
                            android:textColor="#333333"
                            android:textColorHint="#999999"
                            android:textSize="14dp" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="1px"
                            android:layout_alignParentBottom="true"
                            android:layout_marginLeft="5dp"
                            android:background="@color/rcbase_app_line_default" />
                    </RelativeLayout>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/wifi_on"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@mipmap/ic_wifi_notselected"
                        android:drawablePadding="8dp"
                        android:text="@string/rcdevice_wifi_on"
                        android:textColor="#666666"
                        android:textSize="14dp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:drawableLeft="@mipmap/ic_wifi"
                        android:text="@string/rcdevice_wifi_on_2"
                        android:textColor="#666666"
                        android:textSize="14dp" />
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:id="@+id/wifi_connect"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_marginLeft="35dp"
                android:layout_marginRight="35dp"
                android:layout_marginTop="39dp"
                android:background="@color/rcbase_app_main"
                android:gravity="center"
                android:text="@string/rcdevice_wifi_connect"
                android:textColor="@color/rcbase_white"
                android:textSize="16dp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>